added responsible design beta test in css file

--- a/style.css
+++ b/style.css
@@ -71,7 +71,11 @@ footer{
     text-align: center;
 }
 
-
+@media only screen and (max-width: 641px){
+    .formBox{
+        flex-direction: column;
+    }
+}
 
 
 
